--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -328,31 +328,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best ARIMANone MSE = inf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from statsmodels.tsa.arima_model import ARIMA\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "# Load your time series data (replace with your actual data)\n",
-    "# df = pd.read_csv('your_data.csv')\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define parameter ranges\n",
     "p_values = range(3)  # Adjust as needed\n",
     "d_values = range(2)\n",
-    "q_values = range(3)\n",
-    "\n",
+    "q_values = range(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def evaluate_arima_model(X, order):\n",
     "    train_size = int(len(X) * 0.66)\n",
     "    train, test = X[0:train_size], X[train_size:]\n",
@@ -365,8 +368,15 @@
     "        predictions.append(yhat)\n",
     "        history.append(test[t])\n",
     "    error = mean_squared_error(test, predictions)\n",
-    "    return error\n",
-    "\n",
+    "    return error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def evaluate_models(dataset, p_values, d_values, q_values):\n",
     "    dataset = dataset.astype('float32')\n",
     "    best_score, best_cfg = float(\"inf\"), None\n",
@@ -378,18 +388,33 @@
     "                    mse = evaluate_arima_model(dataset, order)\n",
     "                    if mse < best_score:\n",
     "                        best_score, best_cfg = mse, order\n",
-    "                        print(f'ARIMA{order} MSE = {mse:.3f}')\n",
+    "                        print(f'ARIMA {order} MSE = {mse:.3f}')\n",
     "                except:\n",
     "                    continue\n",
-    "    print(f'Best ARIMA{best_cfg} MSE = {best_score:.3f}')\n",
-    "\n",
-    "# Example usage\n",
-    "evaluate_models(df['Price'], p_values, d_values, q_values)\n"
+    "    print(f'Best ARIMA {best_cfg} MSE = {best_score:.3f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best ARIMA None MSE = inf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "evaluate_models(df['Price'], p_values, d_values, q_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +424,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmodel_fit\u001b[49m\u001b[38;5;241m.\u001b[39msummary())\n",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmodel_fit\u001b[49m\u001b[38;5;241m.\u001b[39msummary())\n",
       "\u001b[1;31mNameError\u001b[0m: name 'model_fit' is not defined"
      ]
     }
